# catalog/pkg/openapi/model_mcp_config_map_requirement.go
@@ -1,0 +1,261 @@
+/*
+Model Catalog REST API
+
+REST API for Model Registry to create and manage ML model metadata
+
+API version: v1alpha1
+*/
+
+// Code generated by OpenAPI Generator (https://openapi-generator.tech); DO NOT EDIT.
+
+package openapi
+
+import (
+	"encoding/json"
+)
+
+// checks if the MCPConfigMapRequirement type satisfies the MappedNullable interface at compile time
+var _ MappedNullable = &MCPConfigMapRequirement{}
+
+// MCPConfigMapRequirement Kubernetes ConfigMap requirement metadata
+type MCPConfigMapRequirement struct {
+	// Suggested ConfigMap name (must be valid Kubernetes name)
+	Name string `json:"name" validate:"regexp=^[a-z0-9]([-a-z0-9]*[a-z0-9])?(\\\\.[a-z0-9]([-a-z0-9]*[a-z0-9])?)*$"`
+	// Purpose of the ConfigMap
+	Description string `json:"description"`
+	// Expected keys within the ConfigMap
+	Keys []MCPConfigMapKey `json:"keys,omitempty"`
+	// Whether to mount ConfigMap as files
+	MountAsFile *bool `json:"mountAsFile,omitempty"`
+	// Mount path when mountAsFile is true (must be absolute path)
+	MountPath *string `json:"mountPath,omitempty" validate:"regexp=^\\/[a-zA-Z0-9\\/_-]*$"`
+}
+
+type _MCPConfigMapRequirement MCPConfigMapRequirement
+
+// NewMCPConfigMapRequirement instantiates a new MCPConfigMapRequirement object
+// This constructor will assign default values to properties that have it defined,
+// and makes sure properties required by API are set, but the set of arguments
+// will change when the set of required properties is changed
+func NewMCPConfigMapRequirement(name string, description string) *MCPConfigMapRequirement {
+	this := MCPConfigMapRequirement{}
+	this.Name = name
+	this.Description = description
+	var mountAsFile bool = true
+	this.MountAsFile = &mountAsFile
+	return &this
+}
+
+// NewMCPConfigMapRequirementWithDefaults instantiates a new MCPConfigMapRequirement object
+// This constructor will only assign default values to properties that have it defined,
+// but it doesn't guarantee that properties required by API are set
+func NewMCPConfigMapRequirementWithDefaults() *MCPConfigMapRequirement {
+	this := MCPConfigMapRequirement{}
+	var mountAsFile bool = true
+	this.MountAsFile = &mountAsFile
+	return &this
+}
+
+// GetName returns the Name field value
+func (o *MCPConfigMapRequirement) GetName() string {
+	if o == nil {
+		var ret string
+		return ret
+	}
+
+	return o.Name
+}
+
+// GetNameOk returns a tuple with the Name field value
+// and a boolean to check if the value has been set.
+func (o *MCPConfigMapRequirement) GetNameOk() (*string, bool) {
+	if o == nil {
+		return nil, false
+	}
+	return &o.Name, true
+}
+
+// SetName sets field value
+func (o *MCPConfigMapRequirement) SetName(v string) {
+	o.Name = v
+}
+
+// GetDescription returns the Description field value
+func (o *MCPConfigMapRequirement) GetDescription() string {
+	if o == nil {
+		var ret string
+		return ret
+	}
+
+	return o.Description
+}
+
+// GetDescriptionOk returns a tuple with the Description field value
+// and a boolean to check if the value has been set.
+func (o *MCPConfigMapRequirement) GetDescriptionOk() (*string, bool) {
+	if o == nil {
+		return nil, false
+	}
+	return &o.Description, true
+}
+
+// SetDescription sets field value
+func (o *MCPConfigMapRequirement) SetDescription(v string) {
+	o.Description = v
+}
+
+// GetKeys returns the Keys field value if set, zero value otherwise.
+func (o *MCPConfigMapRequirement) GetKeys() []MCPConfigMapKey {
+	if o == nil || IsNil(o.Keys) {
+		var ret []MCPConfigMapKey
+		return ret
+	}
+	return o.Keys
+}
+
+// GetKeysOk returns a tuple with the Keys field value if set, nil otherwise
+// and a boolean to check if the value has been set.
+func (o *MCPConfigMapRequirement) GetKeysOk() ([]MCPConfigMapKey, bool) {
+	if o == nil || IsNil(o.Keys) {
+		return nil, false
+	}
+	return o.Keys, true
+}
+
+// HasKeys returns a boolean if a field has been set.
+func (o *MCPConfigMapRequirement) HasKeys() bool {
+	if o != nil && !IsNil(o.Keys) {
+		return true
+	}
+
+	return false
+}
+
+// SetKeys gets a reference to the given []MCPConfigMapKey and assigns it to the Keys field.
+func (o *MCPConfigMapRequirement) SetKeys(v []MCPConfigMapKey) {
+	o.Keys = v
+}
+
+// GetMountAsFile returns the MountAsFile field value if set, zero value otherwise.
+func (o *MCPConfigMapRequirement) GetMountAsFile() bool {
+	if o == nil || IsNil(o.MountAsFile) {
+		var ret bool
+		return ret
+	}
+	return *o.MountAsFile
+}
+
+// GetMountAsFileOk returns a tuple with the MountAsFile field value if set, nil otherwise
+// and a boolean to check if the value has been set.
+func (o *MCPConfigMapRequirement) GetMountAsFileOk() (*bool, bool) {
+	if o == nil || IsNil(o.MountAsFile) {
+		return nil, false
+	}
+	return o.MountAsFile, true
+}
+
+// HasMountAsFile returns a boolean if a field has been set.
+func (o *MCPConfigMapRequirement) HasMountAsFile() bool {
+	if o != nil && !IsNil(o.MountAsFile) {
+		return true
+	}
+
+	return false
+}
+
+// SetMountAsFile gets a reference to the given bool and assigns it to the MountAsFile field.
+func (o *MCPConfigMapRequirement) SetMountAsFile(v bool) {
+	o.MountAsFile = &v
+}
+
+// GetMountPath returns the MountPath field value if set, zero value otherwise.
+func (o *MCPConfigMapRequirement) GetMountPath() string {
+	if o == nil || IsNil(o.MountPath) {
+		var ret string
+		return ret
+	}
+	return *o.MountPath
+}
+
+// GetMountPathOk returns a tuple with the MountPath field value if set, nil otherwise
+// and a boolean to check if the value has been set.
+func (o *MCPConfigMapRequirement) GetMountPathOk() (*string, bool) {
+	if o == nil || IsNil(o.MountPath) {
+		return nil, false
+	}
+	return o.MountPath, true
+}
+
+// HasMountPath returns a boolean if a field has been set.
+func (o *MCPConfigMapRequirement) HasMountPath() bool {
+	if o != nil && !IsNil(o.MountPath) {
+		return true
+	}
+
+	return false
+}
+
+// SetMountPath gets a reference to the given string and assigns it to the MountPath field.
+func (o *MCPConfigMapRequirement) SetMountPath(v string) {
+	o.MountPath = &v
+}
+
+func (o MCPConfigMapRequirement) MarshalJSON() ([]byte, error) {
+	toSerialize, err := o.ToMap()
+	if err != nil {
+		return []byte{}, err
+	}
+	return json.Marshal(toSerialize)
+}
+
+func (o MCPConfigMapRequirement) ToMap() (map[string]interface{}, error) {
+	toSerialize := map[string]interface{}{}
+	toSerialize["name"] = o.Name
+	toSerialize["description"] = o.Description
+	if !IsNil(o.Keys) {
+		toSerialize["keys"] = o.Keys
+	}
+	if !IsNil(o.MountAsFile) {
+		toSerialize["mountAsFile"] = o.MountAsFile
+	}
+	if !IsNil(o.MountPath) {
+		toSerialize["mountPath"] = o.MountPath
+	}
+	return toSerialize, nil
+}
+
+type NullableMCPConfigMapRequirement struct {
+	value *MCPConfigMapRequirement
+	isSet bool
+}
+
+func (v NullableMCPConfigMapRequirement) Get() *MCPConfigMapRequirement {
+	return v.value
+}
+
+func (v *NullableMCPConfigMapRequirement) Set(val *MCPConfigMapRequirement) {
+	v.value = val
+	v.isSet = true
+}
+
+func (v NullableMCPConfigMapRequirement) IsSet() bool {
+	return v.isSet
+}
+
+func (v *NullableMCPConfigMapRequirement) Unset() {
+	v.value = nil
+	v.isSet = false
+}
+
+func NewNullableMCPConfigMapRequirement(val *MCPConfigMapRequirement) *NullableMCPConfigMapRequirement {
+	return &NullableMCPConfigMapRequirement{value: val, isSet: true}
+}
+
+func (v NullableMCPConfigMapRequirement) MarshalJSON() ([]byte, error) {
+	return json.Marshal(v.value)
+}
+
+func (v *NullableMCPConfigMapRequirement) UnmarshalJSON(src []byte) error {
+	v.isSet = true
+	return json.Unmarshal(src, &v.value)
+}
