# catalog/pkg/openapi/model_mcp_secret_requirement.go
@@ -1,0 +1,261 @@
+/*
+Model Catalog REST API
+
+REST API for Model Registry to create and manage ML model metadata
+
+API version: v1alpha1
+*/
+
+// Code generated by OpenAPI Generator (https://openapi-generator.tech); DO NOT EDIT.
+
+package openapi
+
+import (
+	"encoding/json"
+)
+
+// checks if the MCPSecretRequirement type satisfies the MappedNullable interface at compile time
+var _ MappedNullable = &MCPSecretRequirement{}
+
+// MCPSecretRequirement Kubernetes Secret requirement metadata. Never stores actual secret values - provides discovery hints only.
+type MCPSecretRequirement struct {
+	// Suggested Secret name (must be valid Kubernetes name)
+	Name string `json:"name" validate:"regexp=^[a-z0-9]([-a-z0-9]*[a-z0-9])?(\\\\.[a-z0-9]([-a-z0-9]*[a-z0-9])?)*$"`
+	// Purpose of the Secret and kubectl creation hint. Example: \"kubectl create secret generic openai-credentials --from-literal=api-key=sk-...\"
+	Description string `json:"description"`
+	// Expected keys within the Secret
+	Keys []MCPSecretKey `json:"keys,omitempty"`
+	// Whether to mount Secret as files instead of environment variables
+	MountAsFile *bool `json:"mountAsFile,omitempty"`
+	// Mount path when mountAsFile is true (must be absolute path)
+	MountPath *string `json:"mountPath,omitempty" validate:"regexp=^\\/[a-zA-Z0-9\\/_-]*$"`
+}
+
+type _MCPSecretRequirement MCPSecretRequirement
+
+// NewMCPSecretRequirement instantiates a new MCPSecretRequirement object
+// This constructor will assign default values to properties that have it defined,
+// and makes sure properties required by API are set, but the set of arguments
+// will change when the set of required properties is changed
+func NewMCPSecretRequirement(name string, description string) *MCPSecretRequirement {
+	this := MCPSecretRequirement{}
+	this.Name = name
+	this.Description = description
+	var mountAsFile bool = false
+	this.MountAsFile = &mountAsFile
+	return &this
+}
+
+// NewMCPSecretRequirementWithDefaults instantiates a new MCPSecretRequirement object
+// This constructor will only assign default values to properties that have it defined,
+// but it doesn't guarantee that properties required by API are set
+func NewMCPSecretRequirementWithDefaults() *MCPSecretRequirement {
+	this := MCPSecretRequirement{}
+	var mountAsFile bool = false
+	this.MountAsFile = &mountAsFile
+	return &this
+}
+
+// GetName returns the Name field value
+func (o *MCPSecretRequirement) GetName() string {
+	if o == nil {
+		var ret string
+		return ret
+	}
+
+	return o.Name
+}
+
+// GetNameOk returns a tuple with the Name field value
+// and a boolean to check if the value has been set.
+func (o *MCPSecretRequirement) GetNameOk() (*string, bool) {
+	if o == nil {
+		return nil, false
+	}
+	return &o.Name, true
+}
+
+// SetName sets field value
+func (o *MCPSecretRequirement) SetName(v string) {
+	o.Name = v
+}
+
+// GetDescription returns the Description field value
+func (o *MCPSecretRequirement) GetDescription() string {
+	if o == nil {
+		var ret string
+		return ret
+	}
+
+	return o.Description
+}
+
+// GetDescriptionOk returns a tuple with the Description field value
+// and a boolean to check if the value has been set.
+func (o *MCPSecretRequirement) GetDescriptionOk() (*string, bool) {
+	if o == nil {
+		return nil, false
+	}
+	return &o.Description, true
+}
+
+// SetDescription sets field value
+func (o *MCPSecretRequirement) SetDescription(v string) {
+	o.Description = v
+}
+
+// GetKeys returns the Keys field value if set, zero value otherwise.
+func (o *MCPSecretRequirement) GetKeys() []MCPSecretKey {
+	if o == nil || IsNil(o.Keys) {
+		var ret []MCPSecretKey
+		return ret
+	}
+	return o.Keys
+}
+
+// GetKeysOk returns a tuple with the Keys field value if set, nil otherwise
+// and a boolean to check if the value has been set.
+func (o *MCPSecretRequirement) GetKeysOk() ([]MCPSecretKey, bool) {
+	if o == nil || IsNil(o.Keys) {
+		return nil, false
+	}
+	return o.Keys, true
+}
+
+// HasKeys returns a boolean if a field has been set.
+func (o *MCPSecretRequirement) HasKeys() bool {
+	if o != nil && !IsNil(o.Keys) {
+		return true
+	}
+
+	return false
+}
+
+// SetKeys gets a reference to the given []MCPSecretKey and assigns it to the Keys field.
+func (o *MCPSecretRequirement) SetKeys(v []MCPSecretKey) {
+	o.Keys = v
+}
+
+// GetMountAsFile returns the MountAsFile field value if set, zero value otherwise.
+func (o *MCPSecretRequirement) GetMountAsFile() bool {
+	if o == nil || IsNil(o.MountAsFile) {
+		var ret bool
+		return ret
+	}
+	return *o.MountAsFile
+}
+
+// GetMountAsFileOk returns a tuple with the MountAsFile field value if set, nil otherwise
+// and a boolean to check if the value has been set.
+func (o *MCPSecretRequirement) GetMountAsFileOk() (*bool, bool) {
+	if o == nil || IsNil(o.MountAsFile) {
+		return nil, false
+	}
+	return o.MountAsFile, true
+}
+
+// HasMountAsFile returns a boolean if a field has been set.
+func (o *MCPSecretRequirement) HasMountAsFile() bool {
+	if o != nil && !IsNil(o.MountAsFile) {
+		return true
+	}
+
+	return false
+}
+
+// SetMountAsFile gets a reference to the given bool and assigns it to the MountAsFile field.
+func (o *MCPSecretRequirement) SetMountAsFile(v bool) {
+	o.MountAsFile = &v
+}
+
+// GetMountPath returns the MountPath field value if set, zero value otherwise.
+func (o *MCPSecretRequirement) GetMountPath() string {
+	if o == nil || IsNil(o.MountPath) {
+		var ret string
+		return ret
+	}
+	return *o.MountPath
+}
+
+// GetMountPathOk returns a tuple with the MountPath field value if set, nil otherwise
+// and a boolean to check if the value has been set.
+func (o *MCPSecretRequirement) GetMountPathOk() (*string, bool) {
+	if o == nil || IsNil(o.MountPath) {
+		return nil, false
+	}
+	return o.MountPath, true
+}
+
+// HasMountPath returns a boolean if a field has been set.
+func (o *MCPSecretRequirement) HasMountPath() bool {
+	if o != nil && !IsNil(o.MountPath) {
+		return true
+	}
+
+	return false
+}
+
+// SetMountPath gets a reference to the given string and assigns it to the MountPath field.
+func (o *MCPSecretRequirement) SetMountPath(v string) {
+	o.MountPath = &v
+}
+
+func (o MCPSecretRequirement) MarshalJSON() ([]byte, error) {
+	toSerialize, err := o.ToMap()
+	if err != nil {
+		return []byte{}, err
+	}
+	return json.Marshal(toSerialize)
+}
+
+func (o MCPSecretRequirement) ToMap() (map[string]interface{}, error) {
+	toSerialize := map[string]interface{}{}
+	toSerialize["name"] = o.Name
+	toSerialize["description"] = o.Description
+	if !IsNil(o.Keys) {
+		toSerialize["keys"] = o.Keys
+	}
+	if !IsNil(o.MountAsFile) {
+		toSerialize["mountAsFile"] = o.MountAsFile
+	}
+	if !IsNil(o.MountPath) {
+		toSerialize["mountPath"] = o.MountPath
+	}
+	return toSerialize, nil
+}
+
+type NullableMCPSecretRequirement struct {
+	value *MCPSecretRequirement
+	isSet bool
+}
+
+func (v NullableMCPSecretRequirement) Get() *MCPSecretRequirement {
+	return v.value
+}
+
+func (v *NullableMCPSecretRequirement) Set(val *MCPSecretRequirement) {
+	v.value = val
+	v.isSet = true
+}
+
+func (v NullableMCPSecretRequirement) IsSet() bool {
+	return v.isSet
+}
+
+func (v *NullableMCPSecretRequirement) Unset() {
+	v.value = nil
+	v.isSet = false
+}
+
+func NewNullableMCPSecretRequirement(val *MCPSecretRequirement) *NullableMCPSecretRequirement {
+	return &NullableMCPSecretRequirement{value: val, isSet: true}
+}
+
+func (v NullableMCPSecretRequirement) MarshalJSON() ([]byte, error) {
+	return json.Marshal(v.value)
+}
+
+func (v *NullableMCPSecretRequirement) UnmarshalJSON(src []byte) error {
+	v.isSet = true
+	return json.Unmarshal(src, &v.value)
+}
